# pyetfdb-scraper

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING  CONTRIBUTING.md  MANIFEST.in  README.md  pyproject.toml  setup.py
src/pyetfdb_scraper/: etf.py  etf_scraper.py  utils.py
src/pyetfdb_scraper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/pyetfdb_scraper/models/: __init__.py  expense.py  info.py
src/pyetfdb_scraper/tabs/: __init__.py  dividend.py  expense.py  holding_analysis.py  holdings.py  info.py  performance.py  realtime_ratings.py  technicals.py
